# arUco-Optimized

./: CMakeLists.txt
config/: ost.yaml
src/: main.cpp
